Fix color contrast footer

--- a/code/src/components/footer.css
+++ b/code/src/components/footer.css
@@ -11,7 +11,7 @@
 /*footer*/
 .footer-container {
   color: #fff;
-  background-color: rgba(40, 39, 39, 0.6); 
+  background-color: rgba(40, 39, 39, 0.7); 
   padding: 10px 0 10px 0;
   position: fixed;
   left: 0;
